@@ -1,27 +1,20 @@
 import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import java.util.ArrayList;
 
 class InMemoryTaskManagerTest {
-    Task task = new Task("Test addNewTask 0", "Test addNewTask 0 description", TaskStatus.NEW);
-    Task task1 = new Task("Test addNewTask 1", "Test addNewTask 1 description", TaskStatus.NEW);
-    Task task2 = new Task("Test addNewTask 2", "Test addNewTask 2 description", TaskStatus.NEW);
-    Task task3 = new Task("Test addNewTask 3", "Test addNewTask 3 description", TaskStatus.NEW);
-    Task task4 = new Task("Test addNewTask 4", "Test addNewTask 4 description", TaskStatus.NEW);
-    Task task5 = new Task("Test addNewTask 5", "Test addNewTask 5 description", TaskStatus.NEW);
-    Task task6 = new Task("Test addNewTask 6", "Test addNewTask 6 description", TaskStatus.NEW);
-    Task task7 = new Task("Test addNewTask 7", "Test addNewTask 7 description", TaskStatus.NEW);
-    Task task8 = new Task("Test addNewTask 8", "Test addNewTask 8 description", TaskStatus.NEW);
-    Task task9 = new Task("Test addNewTask 9", "Test addNewTask 9 description", TaskStatus.NEW);
-    Task task10 = new Task("Test addNewTas 10k", "Test addNewTask 10 description", TaskStatus.NEW);
+
+    InMemoryTaskManager inMemoryTaskManager = new InMemoryTaskManager();
 
     @Test
     void addNewTask() {
-        InMemoryTaskManager inMemoryTaskManager = new InMemoryTaskManager();
+        Task task = new Task("Test addNewTask 0", "Test addNewTask 0 description", inMemoryTaskManager.genId(), TaskStatus.NEW);
+
         inMemoryTaskManager.addTask(task);
-        final int taskId = inMemoryTaskManager.getId(task);
+        final int taskId = task.getId();
 
         final Task savedTask = inMemoryTaskManager.getTaskById(Integer.toString(taskId));
 
@@ -32,39 +25,52 @@ class InMemoryTaskManagerTest {
 
         assertNotNull(tasks, "Задачи не возвращаются.");
         assertEquals(1, tasks.size(), "Неверное количество задач.");
-        assertEquals(task, tasks.get(0), "Задачи не совпадают.");
+        assertEquals(task, tasks.getFirst(), "Задачи не совпадают.");
     }
 
     @Test
     void history (){
-        InMemoryTaskManager taskManagerHystory = new InMemoryTaskManager();
-        assertEquals(0, taskManagerHystory.getHistory().size(), "Количество задач не верно.");
-        taskManagerHystory.addTask(task);
-        taskManagerHystory.addTask(task1);
-        taskManagerHystory.addTask(task2);
-        taskManagerHystory.addTask(task3);
-        taskManagerHystory.addTask(task4);
-        taskManagerHystory.addTask(task5);
-        taskManagerHystory.addTask(task6);
-        taskManagerHystory.addTask(task7);
-        taskManagerHystory.addTask(task8);
-        taskManagerHystory.addTask(task9);
-        taskManagerHystory.addTask(task10);
+        Task task1 = new Task("Test addNewTask 1", "Test addNewTask 1 description", inMemoryTaskManager.genId(), TaskStatus.NEW);
+        Task task2 = new Task("Test addNewTask 2", "Test addNewTask 2 description", inMemoryTaskManager.genId(), TaskStatus.NEW);
+        Task task3 = new Task("Test addNewTask 3", "Test addNewTask 3 description", inMemoryTaskManager.genId(), TaskStatus.NEW);
+        Task task4 = new Task("Test addNewTask 4", "Test addNewTask 4 description", inMemoryTaskManager.genId(), TaskStatus.NEW);
+        Task task5 = new Task("Test addNewTask 5", "Test addNewTask 5 description", inMemoryTaskManager.genId(), TaskStatus.NEW);
+        Task task6 = new Task("Test addNewTask 6", "Test addNewTask 6 description", inMemoryTaskManager.genId(), TaskStatus.NEW);
+        Task task7 = new Task("Test addNewTask 7", "Test addNewTask 7 description", inMemoryTaskManager.genId(), TaskStatus.NEW);
+        Task task8 = new Task("Test addNewTask 8", "Test addNewTask 8 description", inMemoryTaskManager.genId(), TaskStatus.NEW);
+        Task task9 = new Task("Test addNewTask 9", "Test addNewTask 9 description", inMemoryTaskManager.genId(), TaskStatus.NEW);
+        Task task10 = new Task("Test addNewTas 10k", "Test addNewTask 10 description", inMemoryTaskManager.genId(), TaskStatus.NEW);
+        Task task11 = new Task("Test addNewTas 10k", "Test addNewTask 10 description", inMemoryTaskManager.genId(), TaskStatus.NEW);
+
+
+        System.out.println(task1.getId());
+        assertEquals(0, inMemoryTaskManager.getHistory().size(), "Количество задач не верно.");
+
+        inMemoryTaskManager.addTask(task1);
+        inMemoryTaskManager.addTask(task2);
+        inMemoryTaskManager.addTask(task3);
+        inMemoryTaskManager.addTask(task4);
+        inMemoryTaskManager.addTask(task5);
+        inMemoryTaskManager.addTask(task6);
+        inMemoryTaskManager.addTask(task7);
+        inMemoryTaskManager.addTask(task8);
+        inMemoryTaskManager.addTask(task9);
+        inMemoryTaskManager.addTask(task10);
+        inMemoryTaskManager.addTask(task11);
 
         for (int i = 2; i < 13; i++) {
-            System.out.println(i);
             String id =Integer.toString(i);
-            taskManagerHystory.getTaskById(id);
+            inMemoryTaskManager.getTaskById(id);
             if (i == 3){
-                assertEquals(2, taskManagerHystory.getHistory().size(), "Количество задач не верно.");
+                assertEquals(2, inMemoryTaskManager.getHistory().size(), "Количество задач не верно.");
             }
 
-            if (i == 6){
-                assertEquals(task4, taskManagerHystory.getHistory().getLast(), "Последняя добавленная задача не совпадает");
+            if (i == 5){
+                assertEquals(task4, inMemoryTaskManager.getHistory().getLast(), "Последняя добавленная задача не совпадает");
             }
 
         }
-        assertEquals(task1, taskManagerHystory.getHistory().getFirst(), "Первая задача, после превышения лимита не совпадает");
+        assertEquals(task2, inMemoryTaskManager.getHistory().getFirst(), "Первая задача, после превышения лимита не совпадает");
     }
 
 }
